fix: #1057 add align to dropdown

--- a/mw-webapp/src/component/dropdown/Dropdown.module.scss
+++ b/mw-webapp/src/component/dropdown/Dropdown.module.scss
@@ -14,9 +14,9 @@ $dropdownIndentationBottom: 10px;
 .dropdownContent {
   position: absolute;
   z-index: $dropdownZIndex;
-  padding: $paddingMedium;
-  border: 1px solid var(--generalPrimaryColor);
-  background: var(--primaryBgColor);
+  border: $primaryBorder solid var(--generalPrimaryColor);
+  border-radius: $primaryBorderRadius;
+  background: var(--secondaryBgColor);
   list-style: none;
   transform: translateY($dropdownIndentationBottom);
 }
