--- a/mw-webapp/src/component/dropdown/dropdownMenuItem/DropdownMenuItem.module.scss
+++ b/mw-webapp/src/component/dropdown/dropdownMenuItem/DropdownMenuItem.module.scss
@@ -1,14 +1,23 @@
 @import "src/styles/variables";
 
 .dropdownMenuItem {
-  padding: $paddingSmall;
+  padding: $paddingSmall $paddingMedium ;
+  cursor: pointer;
 
-  &:hover {
-    background-color: var(--secondaryBgColor);
-    cursor: pointer;
+  &:not(:last-child) {
+    border-bottom: $primaryBorder solid var(--tertiaryBgColor);
+  }
+  &:first-child {
+    border-top-left-radius: $primaryBorderRadius;
+    border-top-right-radius: $primaryBorderRadius;
+  }
+  &:last-child {
+    border-bottom-left-radius: $primaryBorderRadius;
+    border-bottom-right-radius: $primaryBorderRadius;
   }
 
+  &:hover,
   &:active {
-    background-color: var(--generalPrimaryColor);
+    color: var(--selectHoverColor);
   }
 }
